--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>HTML and CSS</title>
-            <link rel="stylesheet" href="styles.css">
+            <link rel="stylesheet" href="resources/css_files/styles.css">
             <nav>
                 <a href='example.html'>Example</a>
             </nav>
@@ -21,7 +21,7 @@
             <p>Several sub-headings are not uncommon. There may also be sub-sub-headings.</p>
             <h2>Another Sub-Heading</h2>
             <p>More information.</p>
-            <img src="2010-01-C&E_Dragon.png" alt="Example image: Of dragon in a cave and a man swinging a ">
+            <img src="resources/images/2010-01-C&E_Dragon.png" alt="Example image: Of dragon in a cave and a man swinging a mace">
             <p></p>
             <img src="missing.jpg" alt="Example of a missing image file">
         </main>
