--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         <h1>Main Page</h1>
         <p>This part is the main page for my site.</p>
         <h2>Links</h2>
-        <a href=""></a>
+        <a href="wdd130/wwr/site-plan-rafting.html">site-plan-rafting</a>
     </header>
 </body>
