--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Home</title>
+    <link rel="stylesheet" href="wdd130/wwr/styles/site-plan-rafting.css">
 </head>
 
 <body>
