--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
 <head>
     <meta charset="utf-8" />
     <title>Home</title>
-    <link rel="stylesheet" href="wdd130/wwr/styles/site-plan-rafting.css">
+    <link rel="stylesheet" href="styles/home-style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
-
+<nav>
+    <a href="index.html">
+        <i class="material-icons">home</i>
+    </a>
+</nav>
 <body>
     <header>
         <h1>Main Page</h1>
