--- a/index.html
+++ b/index.html
@@ -1,22 +1,9 @@
 <!DOCTYPE html>
-<html lang="en-us"></html>
-
-<head>
-    <meta charset="utf-8" />
-    <title>Home</title>
-    <link rel="stylesheet" href="styles/home-style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-</head>
-<nav>
-    <a href="index.html">
-        <i class="material-icons">home</i>
-    </a>
-</nav>
-<body>
-    <header>
-        <h1>Main Page</h1>
-        <p>This part is the main page for my site.</p>
-        <h2>Links</h2>
-        <a href="wdd130/wwr/site-plan-rafting.html">site-plan-rafting</a>
-    </header>
-</body>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="7; url='https://dchecketts.github.io/home.html'" />
+  </head>
+  <body>
+    <p>Please follow <a href="https://dchecketts.github.io/home.html">this link</a>.</p>
+  </body>
+</html>
