Error page made

--- a/error.html
+++ b/error.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Home</title>
+    <title>404</title>
     <link rel="stylesheet" href="styles/home-style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
@@ -15,10 +15,7 @@
 </nav>
 <body>
     <header>
-        <h1>Main Page</h1>
-        <p>This part is the main page for my site.</p>
-        <h2>Links</h2>
-        <a href="error.html"> About Me</a>
-        <a href="wdd130/wwr/site-plan-rafting.html">Site Plan Rafting</a>
+        <h1>Oh no! It's a 404!</h1>
+        <p>This shouldn't be here! Click the back arrow in your browser to return to the page you had been at before.</p>
     </header>
 </body>
