--- a/error.html
+++ b/error.html
@@ -16,6 +16,6 @@
 <body>
     <header>
         <h1>Oh no! It's a 404!</h1>
-        <FONT COLOR="#ffffff"><p>This shouldn't be here! Click the back arrow in your browser to return to the page you had been at before.</p></FONT>
+        <p class="colored">This shouldn't be here! Click the back arrow in your browser to return to the page you had been at before.</p>
     </header>
 </body>
