--- a/error.html
+++ b/error.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
 </head>
 <nav>
-    <a href="index.html">
+    <a href="home.html">
         <i class="material-icons">home</i>
     </a>
 </nav>
