--- a/home.html
+++ b/home.html
@@ -26,6 +26,6 @@
 <body>
     <header>
         <h1>Main Page</h1>
-        <p>Greetings! Feel free to take a look around.</p>
+        <p>Greetings! Feel free to take a look around. <br> This site was originally designed on desktop, but it works pretty well on mobile as is. (In my opinion)</p>
     </header>
 </body>
