--- a/pages/assignments.html
+++ b/pages/assignments.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Assignments</title>
-    <link rel="stylesheet" href="styles/home-style.css">
+    <link rel="stylesheet" href="https://dchecketts.github.io/styles/home-style.css">
 </head>
 <ul>
     <li> <a href="home.html">Home</a></li>
