--- a/pages/home.html
+++ b/pages/home.html
@@ -3,18 +3,18 @@
 <!-- reference stylesheet and generate navbar -->
 <head>
     <meta charset="utf-8" />
-    <title>Updates</title>
-    <link rel="stylesheet" href="styles/home-style.css">
+    <title>Home</title>
+    <link rel="stylesheet" href="https://dchecketts.github.io/styles/home-style.css">
 </head>
 <ul>
-    <li> <a href="home.html">Home</a></li>
+    <li> <a class="active" href="home.html">Home</a></li>
     <li class="dropdown">
         <a href="assignments.html" class="dropbtn">Assignments</a>
         <div class="dropdown-content">
           <a href="aboutme.html">About Me</a>
           <a href="wdd130/wwr/site-plan-rafting.html">RS Plan</a>        </div>
       </li>
-    <li class="dropdown active">
+    <li class="dropdown">
         <a href="updates.html" class="dropbtn">Updates</a>
     <div class="dropdown-content">
         <a href="updates.html">Version 1</a>
@@ -25,13 +25,7 @@
 <!-- content below -->
 <body>
     <header>
-        <h1>Updates!</h1>
-        <p>Here are updates I've made to my site.</p>
-        <h2>Version 1</h2>
-        <img src="images/version1ofsite.png" alt="Horrid idea to use a CSS file not made for your site">
-        <p>When I first srtarted keeping track. Also where the biggest change happened between this and version 2.</p>
-        <h2>Version 2</h2>
-        <img src="images/version2ofsite.png" alt="Even a basic CSS file made for your site works *wonders*">
-        <p>When I made my own CSS file for this site. Looks pretty good, if I say so myself.</p>
+        <h1>Main Page</h1>
+        <p>Greetings! Feel free to take a look around. <br> This site was originally designed on desktop, but it works pretty well on mobile as is. (In my opinion)</p>
     </header>
 </body>
