--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -3,11 +3,11 @@
 <!-- reference stylesheet and generate navbar -->
 <head>
     <meta charset="utf-8" />
-    <title>Home</title>
-    <link rel="stylesheet" href="styles/home-style.css">
+    <title>About</title>
+    <link rel="stylesheet" href="https://dchecketts.github.io/styles/home-style.css">
 </head>
 <ul>
-    <li> <a class="active" href="home.html">Home</a></li>
+    <li> <a href="home.html">Home</a></li>
     <li class="dropdown">
         <a href="assignments.html" class="dropbtn">Assignments</a>
         <div class="dropdown-content">
@@ -20,12 +20,9 @@
         <a href="updates.html">Version 1</a>
         <a href="updates.html">Version 2</a>
     </div></li>
-    <li style="float:right"> <a href="aboutme.html">About</a></li>
+    <li class="active" style="float:right"> <a href="aboutme.html">About</a></li>
 </ul>
 <!-- content below -->
-<body>
-    <header>
-        <h1>Main Page</h1>
-        <p>Greetings! Feel free to take a look around. <br> This site was originally designed on desktop, but it works pretty well on mobile as is. (In my opinion)</p>
-    </header>
-</body>
+<h1>About Me</h1>
+<p>Hey there! My name is Daniel, and I made this site you see. It was very fun :) <br> <br> I like to read, write, program and watch trees.</p>
+<img src="me.png" alt="A picture of the dude who made this site">
