--- a/pages/error.html
+++ b/pages/error.html
@@ -3,8 +3,8 @@
 <!-- reference stylesheet and generate navbar -->
 <head>
     <meta charset="utf-8" />
-    <title>About</title>
-    <link rel="stylesheet" href="styles/home-style.css">
+    <title>Error!</title>
+    <link rel="stylesheet" href="https://dchecketts.github.io/styles/home-style.css">
 </head>
 <ul>
     <li> <a href="home.html">Home</a></li>
@@ -20,9 +20,11 @@
         <a href="updates.html">Version 1</a>
         <a href="updates.html">Version 2</a>
     </div></li>
-    <li class="active" style="float:right"> <a href="aboutme.html">About</a></li>
+    <li style="float:right"> <a href="aboutme.html">About</a></li>
 </ul>
-<!-- content below -->
-<h1>About Me</h1>
-<p>Hey there! My name is Daniel, and I made this site you see. It was very fun :) <br> <br> I like to read, write, program and watch trees.</p>
-<img src="me.png" alt="A picture of the dude who made this site">
+<body>
+    <header>
+        <h1>Oh no! It's a 404!</h1>
+        <p class="colored">This shouldn't be here! Click the back arrow in your browser to return to the page you had been at before.</p>
+    </header>
+</body>
