--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url='https://dchecketts.github.io/home.html'" />
+    <meta http-equiv="refresh" content="0; url='https://dchecketts.github.io/pages/home.html'" />
   </head>
   <body>
-    <p>Please follow <a href="https://dchecketts.github.io/home.html">this link</a>.</p>
+    <p>Please follow <a href="https://dchecketts.github.io/pages/home.html">this link</a>.</p>
   </body>
 </html>
