--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -12,13 +12,15 @@
         <a href="assignments.html" class="dropbtn">Assignments</a>
         <div class="dropdown-content">
           <a href="aboutme.html">About Me</a>
-          <a href="wdd130/wwr/site-plan-rafting.html">RS Plan</a>        </div>
+          <a href="wdd130/wwr/site-plan-rafting.html">RS Plan</a>
+        </div>
       </li>
     <li class="dropdown">
         <a href="updates.html" class="dropbtn">Updates</a>
     <div class="dropdown-content">
         <a href="updates.html">Version 1</a>
         <a href="updates.html">Version 2</a>
+        <a href="updates.html">Outage</a>
     </div></li>
     <li class="active" style="float:right"> <a href="aboutme.html">About</a></li>
 </ul>
