--- a/updates.html
+++ b/updates.html
@@ -30,11 +30,9 @@
         <p>Here are updates I've made to my site.</p>
         <h2>Version 1</h2>
         <img src="https://dchecketts.github.io/images/version1ofsite.png" alt="Horrid idea to use a CSS file not made for your site">
-        <p>When I first srtarted keeping track. Also where the biggest change happened between this and version 2.</p>
+        <p>When I first started keeping track. Also where the biggest change happened between this and version 2.</p>
         <h2>Version 2</h2>
         <img src="https://dchecketts.github.io/images/version2ofsite.png" alt="Even a basic CSS file made for your site works *wonders*">
         <p>When I made my own CSS file for this site. Looks pretty good, if I say so myself.</p>
-        <h2>Outage</h2>
-        <p>On Jan 3rd, 2023 at 9:12 pm, I moved the pages into their own folder, which resulted in a temporary outage of the site. I fixed it.</p>
     </header>
 </body>
