--- a/updates.html
+++ b/updates.html
@@ -28,10 +28,10 @@
     <header>
         <h1>Updates!</h1>
         <p>Here are updates I've made to my site.</p>
-        <h2>Version 1</h2>
+        <h2>Version 1 - 1/1/23</h2>
         <img src="https://dchecketts.github.io/images/version1ofsite.png" alt="Horrid idea to use a CSS file not made for your site">
         <p>When I first started keeping track. Also where the biggest change happened between this and version 2.</p>
-        <h2>Version 2</h2>
+        <h2>Version 2 - 1/3/23</h2>
         <img src="https://dchecketts.github.io/images/version2ofsite.png" alt="Even a basic CSS file made for your site works *wonders*">
         <p>When I made my own CSS file for this site. Looks pretty good, if I say so myself.</p>
     </header>
