--- a/home.html
+++ b/home.html
@@ -1,32 +1,37 @@
 <!DOCTYPE html>
 <html lang="en-us"></html>
-<!-- reference stylesheet and generate navbar -->
 <head>
     <meta charset="utf-8" />
     <title>Home</title>
-    <link rel="stylesheet" href="https://dchecketts.github.io/styles/home-style.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/home-style.css">
 </head>
-<ul>
-    <li> <a class="active" href="home.html">Home</a></li>
-    <li class="dropdown">
-        <a href="assignments.html" class="dropbtn">Assignments</a>
-        <div class="dropdown-content">
-          <a href="aboutme.html">About Me</a>
-          <a href="wdd130/wwr/site-plan-rafting.html">RS Plan</a>
-        </div>
-      </li>
-    <li class="dropdown">
-        <a href="updates.html" class="dropbtn">Updates</a>
-    <div class="dropdown-content">
-        <a href="updates.html">Version 1</a>
-        <a href="updates.html">Version 2</a>
-    </div></li>
-    <li style="float:right"> <a href="aboutme.html">About</a></li>
-</ul>
-<!-- content below -->
 <body>
     <header>
+        <nav>
+            <li> <a class="active" href="home.html">Home</a></li>
+            <li class="dropdown">
+                <a href="assignments.html" class="dropbtn">Assignments</a>
+                <div class="dropdown-content">
+                <a href="aboutme.html">About Me</a>
+                <a href="wdd130/wwr/site-plan-rafting.html">RS Plan</a>
+                </div>
+            </li>
+            <li class="dropdown">
+                <a href="updates.html" class="dropbtn">Updates</a>
+            <div class="dropdown-content">
+                <a href="updates.html">Version 1</a>
+                <a href="updates.html">Version 2</a>
+            </div></li>
+            <li style="float:right"> <a href="aboutme.html">About</a></li>
+        </nav>
+    </header>
+    <body>
         <h1>Main Page</h1>
         <p>Greetings! Feel free to take a look around. <br> This site was originally designed on desktop, but it works pretty well on mobile as is. (In my opinion)</p>
-    </header>
+    </body>
+    <footer>
+        
+    </footer>
 </body>
