--- a/updates.html
+++ b/updates.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en-us"></html>
-<!-- reference stylesheet and generate navbar -->
 <head>
     <meta charset="utf-8" />
     <title>Updates</title>
     <link rel="stylesheet" href="https://dchecketts.github.io/styles/home-style.css">
 </head>
-<ul>
-    <li> <a href="home.html">Home</a></li>
-    <li class="dropdown">
-        <a href="assignments.html" class="dropbtn">Assignments</a>
-        <div class="dropdown-content">
-          <a href="aboutme.html">About Me</a>
-          <a href="wdd130/wwr/site-plan-rafting.html">RS Plan</a>
-        </div>
-      </li>
-    <li class="dropdown active">
-        <a href="updates.html" class="dropbtn">Updates</a>
-    <div class="dropdown-content">
-        <a href="updates.html">Version 1</a>
-        <a href="updates.html">Version 2</a>
-    </div></li>
-    <li style="float:right"> <a href="aboutme.html">About</a></li>
-</ul>
-<!-- content below -->
 <body>
     <header>
+        <nav>
+            <li> <a class="active" href="home.html">Home</a></li>
+            <li class="dropdown">
+                <a href="assignments.html" class="dropbtn">Assignments</a>
+                <div class="dropdown-content">
+                <a href="aboutme.html">About Me</a>
+                <a href="wdd130/wwr/site-plan-rafting.html">RS Plan</a>
+                </div>
+            </li>
+            <li class="dropdown">
+                <a href="updates.html" class="dropbtn">Updates</a>
+            <div class="dropdown-content">
+                <a href="updates.html">Version 1</a>
+                <a href="updates.html">Version 2</a>
+            </div></li>
+            <li style="float:right"> <a href="aboutme.html">About</a></li>
+        </nav>
+    </header>
+    <body>
         <h1>Updates!</h1>
         <p>Here are updates I've made to my site.</p>
         <h2>Version 1 - 1/1/23</h2>
@@ -34,5 +34,8 @@
         <h2>Version 2 - 1/3/23</h2>
         <img src="https://dchecketts.github.io/images/version2ofsite.png" alt="Even a basic CSS file made for your site works *wonders*">
         <p>When I made my own CSS file for this site. Looks pretty good, if I say so myself.</p>
-    </header>
+    </body>
+    <footer>
+
+    </footer>
 </body>
