--- a/aboutme.html
+++ b/aboutme.html
@@ -1,29 +1,36 @@
 <!DOCTYPE html>
 <html lang="en-us"></html>
-<!-- reference stylesheet and generate navbar -->
 <head>
     <meta charset="utf-8" />
     <title>About</title>
     <link rel="stylesheet" href="https://dchecketts.github.io/styles/home-style.css">
 </head>
-<ul>
-    <li> <a href="home.html">Home</a></li>
-    <li class="dropdown">
-        <a href="assignments.html" class="dropbtn">Assignments</a>
-        <div class="dropdown-content">
-          <a href="aboutme.html">About Me</a>
-          <a href="wdd130/wwr/site-plan-rafting.html">RS Plan</a>
-        </div>
-      </li>
-    <li class="dropdown">
-        <a href="updates.html" class="dropbtn">Updates</a>
-    <div class="dropdown-content">
-        <a href="updates.html">Version 1</a>
-        <a href="updates.html">Version 2</a>
-    </div></li>
-    <li class="active" style="float:right"> <a href="aboutme.html">About</a></li>
-</ul>
-<!-- content below -->
-<h1>About Me</h1>
-<p>Hey there! My name is Daniel, and I made this site you see. It was very fun :) <br> <br> I like to read, write, program and watch trees.</p>
-<img src="me.png" alt="A picture of the dude who made this site">
+<body>
+    <header>
+        <nav>
+            <li> <a class="active" href="home.html">Home</a></li>
+            <li class="dropdown">
+                <a href="assignments.html" class="dropbtn">Assignments</a>
+                <div class="dropdown-content">
+                <a href="aboutme.html">About Me</a>
+                <a href="wdd130/wwr/site-plan-rafting.html">RS Plan</a>
+                </div>
+            </li>
+            <li class="dropdown">
+                <a href="updates.html" class="dropbtn">Updates</a>
+            <div class="dropdown-content">
+                <a href="updates.html">Version 1</a>
+                <a href="updates.html">Version 2</a>
+            </div></li>
+            <li style="float:right"> <a href="aboutme.html">About</a></li>
+        </nav>
+    </header>
+    <body>
+        <h1>About Me</h1>
+        <p>Hey there! My name is Daniel, and I made this site you see. It was very fun :) <br> <br> I like to read, write, program and watch trees.</p>
+        <img src="me.png" alt="A picture of the dude who made this site">
+    </body>
+    <footer>
+
+    </footer>
+</body>
