--- a/error.html
+++ b/error.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
 <html lang="en-us"></html>
-<!-- reference stylesheet and generate navbar -->
 <head>
     <meta charset="utf-8" />
     <title>Error!</title>
     <link rel="stylesheet" href="https://dchecketts.github.io/styles/home-style.css">
 </head>
-<ul>
-    <li> <a href="home.html">Home</a></li>
-    <li class="dropdown">
-        <a href="assignments.html" class="dropbtn">Assignments</a>
-        <div class="dropdown-content">
-          <a href="aboutme.html">About Me</a>
-          <a href="wdd130/wwr/site-plan-rafting.html">RS Plan</a>
-        </div>
-      </li>
-    <li class="dropdown">
-        <a href="updates.html" class="dropbtn">Updates</a>
-    <div class="dropdown-content">
-        <a href="updates.html">Version 1</a>
-        <a href="updates.html">Version 2</a>
-    </div></li>
-    <li style="float:right"> <a href="aboutme.html">About</a></li>
-</ul>
 <body>
     <header>
+        <nav>
+            <li> <a class="active" href="home.html">Home</a></li>
+            <li class="dropdown">
+                <a href="assignments.html" class="dropbtn">Assignments</a>
+                <div class="dropdown-content">
+                <a href="aboutme.html">About Me</a>
+                <a href="wdd130/wwr/site-plan-rafting.html">RS Plan</a>
+                </div>
+            </li>
+            <li class="dropdown">
+                <a href="updates.html" class="dropbtn">Updates</a>
+            <div class="dropdown-content">
+                <a href="updates.html">Version 1</a>
+                <a href="updates.html">Version 2</a>
+            </div></li>
+            <li style="float:right"> <a href="aboutme.html">About</a></li>
+        </nav>
+    </header>
+    <body>
         <h1>Oh no! It's a 404!</h1>
         <p class="colored">This shouldn't be here! Click the back arrow in your browser to return to the page you had been at before.</p>
-    </header>
+    </body>
+    <footer>
+
+    </footer>
 </body>
