--- a/wdd130/wwr/site-plan-rafting.html
+++ b/wdd130/wwr/site-plan-rafting.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1>[Site name] Site Plan</h1>
+    <h1>Dry Oar Site Plan</h1>
     <h2>[FirstName LastName]</h2>
     <h2>WDD 130-[section]</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
