--- a/wdd130/wwr/dry-oar.html
+++ b/wdd130/wwr/dry-oar.html
@@ -4,18 +4,24 @@
     <meta charset="utf-8">
     <title>Dry Oar</title>
     <link rel="stylesheet" href="styles/site-plan-rafting.css">
-    <nav>
-        <a href="dry-oar.html"><img src="images/logo.png" alt="Logo"></a>
-        <a href="dry-oar.html">Home</a>
-        <a href="">Lorem</a>
-        <a href="">Ipsum</a>
-        <a href="">Dolor</a>
-    </nav>
 </head>
 <body>
-    <header>
-        <h1>Lorem ipsum dolor sit</h1>
-        <p.colored>Lorem ipsum dolor sit amet et</p>
-        <a href="">Call to Action</a>
+    <img src="images/white-water-rapids-background-14232217.jpg" alt="">
+    <header.sm-home>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Page2</a>
+            <a href="#">Contact Us</a>
+          </nav>
     </header>
+    <body.top>
+        <div>
+            <h1 class="colored">Lorem ipsum dolor sit</h1>
+            <p>Lorem ipsum dolor sit amet et</p>
+            <a href="">Call to Action</a>
+        </div>
+    </body>
+    <footer>
+
+    </footer>
 </body>
