--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>About</title>
-    <link rel="stylesheet" href="https://dchecketts.github.io/styles/home-style.css">
+    <link rel="stylesheet" href="dchecketts.github.io/styles/home-style.css">
 </head>
 <body>
     <header>
