--- a/wdd130/wwr/dry-oar.html
+++ b/wdd130/wwr/dry-oar.html
@@ -3,25 +3,58 @@
 <head>
     <meta charset="utf-8">
     <title>Dry Oar</title>
-    <link rel="stylesheet" href="styles/site-plan-rafting.css">
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    <img src="images/white-water-rapids-background-14232217.jpg" alt="">
     <header.sm-home>
         <nav>
-            <a href="#">Home</a>
-            <a href="#">Page2</a>
-            <a href="#">Contact Us</a>
+            <li><a href="#"><img src="images/logo.png" alt="Logo"></a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Lorem</a></li>
+            <li><a href="#">Ipsum</a></li>
+            <li><a href="#">Dolor</a></li>
           </nav>
     </header>
-    <body.top>
+    <body>
+        <div class="hero">
+            <h1 class="hero-content">Lorem ipsum dolor sit</h1>
+            <p class="hero-content">Lorem ipsum dolor sit amet et</p>
+            <button class="call hero-content">Call to Action</button>
+        </div>
+        <hr>
+        <table>
+            <tr>
+              <th><img src="../../images/void.png" alt="example"></th>
+              <th><img src="../../images/void.png" alt="example"></th>
+              <th><img src="../../images/void.png" alt="example"></th>
+            </tr>
+            <tr>
+              <td><img src="../../images/void.png" alt="example"></td>
+              <td><img src="../../images/void.png" alt="example"></td>
+              <td><img src="../../images/void.png" alt="example"></td>
+            </tr>
+            <tr>
+              <td><p>Lorem</p></td>
+              <td><p>Ipsum</p></td>
+              <td><p>Dolor</p></td>
+            </tr>
+          </table>
+        <hr>
+        <img src="../../images/void.png" alt="example">
         <div>
-            <h1 class="colored">Lorem ipsum dolor sit</h1>
-            <p>Lorem ipsum dolor sit amet et</p>
-            <a href="">Call to Action</a>
+            <h3>Lorem ipsum dolor</h3>
+            <p>Lorem ipsum dolor it amet et delectus accommodare his comsul copiosae legendos at vix ad putent</p>
+            <button class="join">Join Us</button>
         </div>
     </body>
     <footer>
-
+        <p>Lorem ipsum 2025</p>
+        <p>Dolor sit</p>
+        <p>Amet et</p>
+        <div>
+            <img src="../../images/void.png" alt="example">
+            <img src="../../images/void.png" alt="example">
+            <img src="../../images/void.png" alt="example">
+        </div>
     </footer>
 </body>
