--- a/wdd130/wwr/dry-oar.html
+++ b/wdd130/wwr/dry-oar.html
@@ -39,22 +39,27 @@
               <td><p>Dolor</p></td>
             </tr>
           </table>
+
         <hr>
-        <img src="../../images/void.png" alt="example">
         <div>
+          <img src="../../images/void.png" alt="example">
+          <div class="para-right">
             <h3>Lorem ipsum dolor</h3>
-            <p>Lorem ipsum dolor it amet et delectus accommodare his comsul copiosae legendos at vix ad putent</p>
+            <p>Lorem ipsum dolor it amet et <br> delectus accommodare his comsul <br> copiosae legendos at vix ad putent</p>
             <button class="join">Join Us</button>
+          </div>
         </div>
     </body>
     <footer>
-        <p>Lorem ipsum 2025</p>
-        <p>Dolor sit</p>
-        <p>Amet et</p>
         <div>
+          <p>Lorem ipsum 2025</p>
+          <p>Dolor sit</p>
+          <p>Amet et</p>
+          <div>
             <img src="../../images/void.png" alt="example">
             <img src="../../images/void.png" alt="example">
             <img src="../../images/void.png" alt="example">
+          </div>
         </div>
     </footer>
 </body>
