--- a/wdd130/wwr/dry-oar.html
+++ b/wdd130/wwr/dry-oar.html
@@ -55,7 +55,7 @@
           <p>Lorem ipsum 2025</p>
           <p>Dolor sit</p>
           <p>Amet et</p>
-          <div>
+          <div class="foot-right">
             <img src="../../images/void.png" alt="example">
             <img src="../../images/void.png" alt="example">
             <img src="../../images/void.png" alt="example">
