--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta http-equiv="refresh" content="0; url='https://dchecketts.github.io/home.html'" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="#">
+    <title>Home</title>
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script> 
+    <script>  
+      $(function(){ 
+        $("#header").load("header.html");  
+        $("#footer").load("footer.html");  
+      }); 
+</script>
   </head>
   <body>
-    <p>Please follow <a href="https://dchecketts.github.io/home.html">this link</a>.</p>
+    <h1>Main Page</h1>
+    <p>Greetings! Feel free to take a look around</p>
   </body>
 </html>
