fixed faulty image

--- a/specific-heat/specific-heat.html
+++ b/specific-heat/specific-heat.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!-- Origional page: http://hyperphysics.phy-astr.gsu.edu/hbase/thermo/spht.html#c1 
+This was made as a side project when a friend of mine showed me a page that I knew could be done better, and I saw it as a fun challange -->
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -7,7 +9,6 @@
         <meta name="author" content="Daniel Checketts">
         <title>Specific Heat</title>
         <link rel="stylesheet" href="./specific-heat.css">
-        <!-- Origional page: http://hyperphysics.phy-astr.gsu.edu/hbase/thermo/spht.html#c1 -->
     </head>
     <body>
         <div class="flex-container">
@@ -36,7 +37,7 @@
             <h1>Specific Heat</h1>
             <p>The specific heat is the amount of <a href="http://hyperphysics.phy-astr.gsu.edu/hbase/thermo/heat.html#c1">heat</a> per unit mass required to raise the <a href="http://hyperphysics.phy-astr.gsu.edu/hbase/thermo/temper.html#c1">temprature</a> by one degree Celcius. The relationship between heat and temperature change is usually expressed in the form shown below where c is the specific heat. The relationship does not apply if a <a href="http://hyperphysics.phy-astr.gsu.edu/hbase/thermo/phase.html#c1">phase change</a> is encountered, because the heat added or removed during a phase change does not change the temperature.</p>
             <div>
-                <img src="http://hyperphysics.phy-astr.gsu.edu/hbase/thermo/imgheat/shta.gif" alt="Q = cm delta T">
+                <img src="./shta.png" alt="Q = cm delta T">
             </div>
             <p>The specific heat of water is 1 calorie/gram °C = 4.186 joule/gram °C which is higher than any other common substance. As a result, water plays a very important role in temperature regulation. The specific heat per gram for water is much higher than that for a metal, as described in the <a href="http://hyperphysics.phy-astr.gsu.edu/hbase/thermo/inteng.html#c4">water-metal example</a>. For most purposes, it is more meaningful to compare the molar specific heats of substances.</p>
             <p>The molar specific heats of most solids at room temperature and above are nearly constant, in agreement with the <a href="http://hyperphysics.phy-astr.gsu.edu/hbase/thermo/dulong.html#c1">Law of Dulong and Petit</a>. At lower temperatures the specific heats drop as quantum processes become significant. The low temperature behavior is described by the <a href="v">Einstein-Debye model</a> of specific heat.</p>
