--- a/specific-heat/specific-heat.html
+++ b/specific-heat/specific-heat.html
@@ -20,7 +20,7 @@ This was made as a side project when a friend of mine showed me a page that I kn
                 <li><a href="http://hyperphysics.phy-astr.gsu.edu/hbase/thermo/spht.html#c2">Calculation</a></li>
                 <div class="roofed">
                     <li class="navigational"><a href="http://hyperphysics.phy-astr.gsu.edu/hbase/hframe.html">Index</a></li>
-                    <li class="navigational"><a href="#">Go Back</a></li>
+                    <li class="navigational"><a href="http://hyperphysics.phy-astr.gsu.edu/hbase/thermo/spht.html#c1">Go Back</a></li>
                 </div>
                 </ul>
             </nav>
