Build neader and footers

--- a/wdd130/wwr/index.html
+++ b/wdd130/wwr/index.html
@@ -8,9 +8,15 @@
         <title>Dry Oar</title>
     </head>
     <body>
-        <header class="navigation">
+        <header>
             <!-- navbar html file ref? -->
-            <p>Temp Nav</p>
+            <nav class="navigation">
+                <img class="nav-child" src="#" alt="Logo">
+                <a class="nav-child" href="#">Home</a>
+                <a class="nav-child" href="#">Lorem</a>
+                <a class="nav-child" href="#">Ipsum</a>
+                <a class="nav-child" href="#">Dolor</a>
+            </nav>
         </header>
         <section>
             <!-- hero -->
@@ -49,7 +55,16 @@
         </section>
         <footer class="foot">
             <!-- footer html file ref? -->
-            Temp Footer
+            <div class="left-foot">
+                <p>Lorem ipsum 2025</p>
+                <p>Dolor sit</p>
+                <p>Amet et</p>
+            </div>
+            <div class="right-foot">
+                <img src="#" alt="Image 1">
+                <img src="#" alt="Image 2">
+                <img src="#" alt="Image 3">
+            </div>
         </footer>
     </body>
 </html>
