--- a/wdd130/wwr/index.html
+++ b/wdd130/wwr/index.html
@@ -1,70 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./styles/newstyle.css">
-        <title>Dry Oar</title>
-    </head>
-    <body>
-        <header>
-            <!-- navbar html file ref? -->
-            <nav class="navigation">
-                <img class="nav-child" src="#" alt="Logo">
-                <a class="nav-child" href="#">Home</a>
-                <a class="nav-child" href="#">Lorem</a>
-                <a class="nav-child" href="#">Ipsum</a>
-                <a class="nav-child" href="#">Dolor</a>
-            </nav>
-        </header>
-        <section>
-            <!-- hero -->
-            <div class="hero">
-                <h1>Lorem ipsum dolor sit</h1>
-                <p>Lorem ipsum dolor sit amet et</p>
-                <button> Call to Action</button>
-            </div>
-            <!-- gallery -->
-            <div class="gallery">
-                <div class="gallery-child">
-                    <img src="#" alt="Lorem">
-                    <img src="#" alt="Ipsum">
-                    <p>Lorem</p>
-                </div>
-                <div class="gallery-child">
-                    <img src="#" alt="Lorem">
-                    <img src="#" alt="Ipsum">
-                    <p>Ipsum</p>
-                </div>
-                <div class="gallery-child">
-                    <img src="#" alt="Lorem">
-                    <img src="#" alt="Ipsum">
-                    <p>Dolor</p>
-                </div>
-            </div>
-            <!-- join us -->
-            <div class="join">
-                <img class="join-img" src="#" alt="Lorem">
-                <div class="join-child">
-                    <h2>Lorem ipsum dolor</h2>
-                    <p>Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent</p>
-                    <button>Join Us</button>
-                </div>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dry Oar | Home</title>
+    <link rel="stylesheet" href="./styles/#">
+</head>
+<body>
+    <header>
+        <a id="logo_link" href="index.html">
+            <img class="logo" src="./images/logo.png" alt="Dry Oar Logo">
+        </a>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="#">Page 2</a>
+            <a href="site-plan-rafting.html">Site Plan</a>
+            <a href="contactus.html">Contact Us</a>
+        </nav>
+    </header>
+    <div id="hero">
+        <div id="hero-box">
+            <img id="hero-img" src="./images/hero.png" alt="People enjoying white water rafting">
+        </div>
+        <section id="hero-msg">
+            <h1 class="home-title">Have An Adventure</h1>
+            <h4>Make Memories with Dry Oar</h4>
+            <div class='button-box'>
+                <a class='book' href="contactus.html">Book Now</a>
             </div>
         </section>
-        <footer class="foot">
-            <!-- footer html file ref? -->
-            <div class="left-foot">
-                <p>Lorem ipsum 2025</p>
-                <p>Dolor sit</p>
-                <p>Amet et</p>
-            </div>
-            <div class="right-foot">
-                <img src="#" alt="Image 1">
-                <img src="#" alt="Image 2">
-                <img src="#" alt="Image 3">
-            </div>
-        </footer>
-    </body>
+    </div>
+    <main class="home-grid">
+        <section class="rivers-card">
+            <img class="card-img" src="./images/rivers.jpg" alt="river in forest">
+            <img class="icon" src="./images/river_icon.png" alt="river icon">
+            <h2>Rivers</h2>
+        </section>
+        <section class="camping-card">
+            <img class="card-img" src="./images/camping.jpg" alt="tent in mountains">
+            <img class="icon" src="./images/fire_icon.png" alt="fire icon">
+            <h2>Camping</h2>
+        </section>
+        <section class="rapids-card">
+            <img class="card-img" src="./images/rapids.jpg" alt="rafting boat">
+            <img class="icon" src="./images/oars.png" alt="oars icon">
+            <h2>Rapids</h2>
+        </section>
+        <img class="mountains" src="./images/mountains.jpg" alt="Misty mountains">
+        <section class="msg">
+            <h2>More Than Just The Thrill</h2>
+            <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
+            <a class='join' href="./rivers.html">Join Us</a>
+        </section>
+    </main>
+    <footer>
+        <p>Dry Oar &copy; 2023 - Daniel Checketts</p>
+        <p><a href="./site-plan-rafting.html">Site Plan</a></p>
+        <p><a href="./contactus.html">Contact Us</a></p>
+        <div class="social">
+            <a href="https://facebook.com">
+                <img src="./images/facebook.png" alt="fb icon">
+            </a>
+            <a href="https://twitter.com">
+                <img src="./images/twitter.png" alt="twitter icon">
+            </a>
+            <a href="https://instagram.com">
+                <img src="./images/instagram.png" alt="instagram icon">
+            </a>
+        </div>
+    </footer>
 </html>
