--- a/wdd130/wwr/index.html
+++ b/wdd130/wwr/index.html
@@ -21,7 +21,7 @@
     </header>
     <div id="hero">
         <div id="hero-box">
-            <img id="hero-img" src="./images/hero.png" alt="People enjoying white water rafting">
+            <img id="hero-img" src="./images/images/hero.png" alt="People enjoying white water rafting">
         </div>
         <section id="hero-msg">
             <h1 class="home-title">Have An Adventure</h1>
@@ -33,21 +33,21 @@
     </div>
     <main class="home-grid">
         <section class="rivers-card">
-            <img class="card-img" src="./images/rivers.jpg" alt="river in forest">
-            <img class="icon" src="./images/river_icon.png" alt="river icon">
+            <img class="card-img" src="./images/images/rivers.jpg" alt="river in forest">
+            <img class="icon" src="./images/icons/river_icon.png" alt="river icon">
             <h2>Rivers</h2>
         </section>
         <section class="camping-card">
-            <img class="card-img" src="./images/camping.jpg" alt="tent in mountains">
-            <img class="icon" src="./images/fire_icon.png" alt="fire icon">
+            <img class="card-img" src="./images/images/camping.jpg" alt="tent in mountains">
+            <img class="icon" src="./images/icons/fire_icon.png" alt="fire icon">
             <h2>Camping</h2>
         </section>
         <section class="rapids-card">
-            <img class="card-img" src="./images/rapids.jpg" alt="rafting boat">
-            <img class="icon" src="./images/oars.png" alt="oars icon">
+            <img class="card-img" src="./images/images/rapids.jpg" alt="rafting boat">
+            <img class="icon" src="./images/icons/oars.png" alt="oars icon">
             <h2>Rapids</h2>
         </section>
-        <img class="mountains" src="./images/mountains.jpg" alt="Misty mountains">
+        <img class="mountains" src="./images/images/mountains.jpg" alt="Misty mountains">
         <section class="msg">
             <h2>More Than Just The Thrill</h2>
             <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
@@ -60,13 +60,13 @@
         <p><a href="./contactus.html">Contact Us</a></p>
         <div class="social">
             <a href="https://facebook.com">
-                <img src="./images/facebook.png" alt="fb icon">
+                <img src="./images/social/facebook.png" alt="fb icon">
             </a>
             <a href="https://twitter.com">
-                <img src="./images/twitter.png" alt="twitter icon">
+                <img src="./images/social/twitter.png" alt="twitter icon">
             </a>
             <a href="https://instagram.com">
-                <img src="./images/instagram.png" alt="instagram icon">
+                <img src="./images/social/instagram.png" alt="instagram icon">
             </a>
         </div>
     </footer>
