--- a/index.html
+++ b/index.html
@@ -1,21 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
+<html lang="en-us"></html>
+<head>
+    <meta charset="utf-8" />
+    <title>Home</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="#">
-    <title>Home</title>
-    <script src="//code.jquery.com/jquery-1.10.2.js"></script> 
-    <script>  
-      $(function(){ 
-        $("#header").load("header.html");  
-        $("#footer").load("footer.html");  
-      }); 
-</script>
-  </head>
-  <body>
-    <h1>Main Page</h1>
-    <p>Greetings! Feel free to take a look around</p>
-  </body>
-</html>
+    <link rel="stylesheet" href="styles/home-style.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <li> <a class="active" href="index.html">Home</a></li>
+            <li class="dropdown">
+                <a href="./assignments.html" class="dropbtn">Assignments</a>
+                <div class="dropdown-content">
+                <a href="./aboutme.html">About Me</a>
+                <a href="./wdd130/wwr/site-plan-rafting.html">RS Plan</a>
+                <a href="./wdd130/wwr/index.html">Dry Oar</a>
+                </div>
+            </li>
+            <li class="dropdown">
+                <a href="updates.html" class="dropbtn">Updates</a>
+            <div class="dropdown-content">
+                <a href="updates.html">Version 1</a>
+                <a href="updates.html">Version 2</a>
+            </div></li>
+            <li style="float:right"> <a href="aboutme.html">About</a></li>
+        </nav>
+    </header>
+    <body>
+        <h1>Main Page</h1>
+        <p>Greetings! Feel free to take a look around. <br> This site was originally designed on desktop, but it works pretty well on mobile as is. (In my opinion)</p>
+    </body>
+    <footer>
+        
+    </footer>
+</body>
