--- a/error.html
+++ b/error.html
@@ -8,12 +8,13 @@
 <body>
     <header>
         <nav>
-            <li> <a class="active" href="home.html">Home</a></li>
+            <li> <a class="active" href="index.html">Home</a></li>
             <li class="dropdown">
-                <a href="assignments.html" class="dropbtn">Assignments</a>
+                <a href="./assignments.html" class="dropbtn">Assignments</a>
                 <div class="dropdown-content">
-                <a href="aboutme.html">About Me</a>
-                <a href="wdd130/wwr/site-plan-rafting.html">RS Plan</a>
+                <a href="./aboutme.html">About Me</a>
+                <a href="./wdd130/wwr/site-plan-rafting.html">RS Plan</a>
+                <a href="./wdd130/wwr/index.html">Dry Oar</a>
                 </div>
             </li>
             <li class="dropdown">
