--- a/wdd130/wwr/index.html
+++ b/wdd130/wwr/index.html
@@ -5,69 +5,72 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dry Oar | Home</title>
-    <link rel="stylesheet" href="./styles/#">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    <header>
-        <a id="logo_link" href="index.html">
-            <img class="logo" src="./images/logo.png" alt="Dry Oar Logo">
-        </a>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="#">Page 2</a>
-            <a href="site-plan-rafting.html">Site Plan</a>
-            <a href="contactus.html">Contact Us</a>
-        </nav>
-    </header>
-    <div id="hero">
-        <div id="hero-box">
-            <img id="hero-img" src="./images/images/hero.png" alt="People enjoying white water rafting">
-        </div>
-        <section id="hero-msg">
-            <h1 class="home-title">Have An Adventure</h1>
-            <h4>Make Memories with Dry Oar</h4>
-            <div class='button-box'>
-                <a class='book' href="contactus.html">Book Now</a>
+    <div id="content">
+        <header>
+            <a id="logo_link" href="index.html">
+                <img class="logo" src="./images/logo.png" alt="Dry Oar Logo">
+            </a>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="#">Page 2</a>
+                <a href="site-plan-rafting.html">Site Plan</a>
+                <a href="contactus.html">Contact Us</a>
+            </nav>
+        </header>
+        <div id="hero">
+            <div id="hero-box">
+                <img id="hero-img" src="./images/images/hero.png" alt="People enjoying white water rafting">
             </div>
-        </section>
-    </div>
-    <main class="home-grid">
-        <section class="rivers-card">
-            <img class="card-img" src="./images/images/rivers.jpg" alt="river in forest">
-            <img class="icon" src="./images/icons/river_icon.png" alt="river icon">
-            <h2>Rivers</h2>
-        </section>
-        <section class="camping-card">
-            <img class="card-img" src="./images/images/camping.jpg" alt="tent in mountains">
-            <img class="icon" src="./images/icons/fire_icon.png" alt="fire icon">
-            <h2>Camping</h2>
-        </section>
-        <section class="rapids-card">
-            <img class="card-img" src="./images/images/rapids.jpg" alt="rafting boat">
-            <img class="icon" src="./images/icons/oars.png" alt="oars icon">
-            <h2>Rapids</h2>
-        </section>
-        <img class="mountains" src="./images/images/mountains.jpg" alt="Misty mountains">
-        <section class="msg">
-            <h2>More Than Just The Thrill</h2>
-            <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
-            <a class='join' href="./rivers.html">Join Us</a>
-        </section>
-    </main>
-    <footer>
-        <p>Dry Oar &copy; 2023 - Daniel Checketts</p>
-        <p><a href="./site-plan-rafting.html">Site Plan</a></p>
-        <p><a href="./contactus.html">Contact Us</a></p>
-        <div class="social">
-            <a href="https://facebook.com">
-                <img src="./images/social/facebook.png" alt="fb icon">
-            </a>
-            <a href="https://twitter.com">
-                <img src="./images/social/twitter.png" alt="twitter icon">
-            </a>
-            <a href="https://instagram.com">
-                <img src="./images/social/instagram.png" alt="instagram icon">
-            </a>
+            <section id="hero-msg">
+                <h1 class="home-title">Have An Adventure</h1>
+                <h4>Make Memories with Dry Oar</h4>
+                <div class='button-box'>
+                    <a class='book' href="contactus.html">Book Now</a>
+                </div>
+            </section>
         </div>
-    </footer>
+        <main class="home-grid">
+            <section class="rivers-card">
+                <img class="card-img" src="./images/images/rivers.jpg" alt="river in forest">
+                <img class="icon" src="./images/icons/river_icon.png" alt="river icon">
+                <h2>Rivers</h2>
+            </section>
+            <section class="camping-card">
+                <img class="card-img" src="./images/images/camping.jpg" alt="tent in mountains">
+                <img class="icon" src="./images/icons/fire_icon.png" alt="fire icon">
+                <h2>Camping</h2>
+            </section>
+            <section class="rapids-card">
+                <img class="card-img" src="./images/images/rapids.jpg" alt="rafting boat">
+                <img class="icon" src="./images/icons/oars.png" alt="oars icon">
+                <h2>Rapids</h2>
+            </section>
+            <div id="background"></div>
+            <img class="mountains" src="./images/images/mountains.jpg" alt="Misty mountains">
+            <section class="msg">
+                <h2>More Than Just The Thrill</h2>
+                <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
+                <a class='join' href="./rivers.html">Join Us</a>
+            </section>
+        </main>
+        <footer>
+            <p>Dry Oar &copy; 2023 - Daniel Checketts</p>
+            <p><a href="./site-plan-rafting.html">Site Plan</a></p>
+            <p><a href="./contactus.html">Contact Us</a></p>
+            <div class="social">
+                <a href="https://facebook.com" target="_blank">
+                    <img src="./images/social/facebook.png" alt="fb icon">
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                    <img src="./images/social/twitter.png" alt="twitter icon">
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                    <img src="./images/social/instagram.png" alt="instagram icon">
+                </a>
+            </div>
+        </footer>
+    </div>
 </html>
