--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
         <nav>
             <li> <a class="active" href="index.html">Home</a></li>
             <li class="dropdown">
-                <a href="./assignments.html" class="dropbtn">Assignments</a>
+                <a href="./pages/assignments.html" class="dropbtn">Assignments</a>
                 <div class="dropdown-content">
-                <a href="./aboutme.html">About Me</a>
-                <a href="./wdd130/wwr/site-plan-rafting.html">RS Plan</a>
-                <a href="./wdd130/wwr/index.html">Dry Oar</a>
+                <a href="./pages/aboutme.html">About Me</a>
+                <a href="./pages/wdd130/wwr/site-plan-rafting.html">RS Plan</a>
+                <a href="./pages/wdd130/wwr/index.html">Dry Oar</a>
                 </div>
             </li>
             <li class="dropdown">
-                <a href="updates.html" class="dropbtn">Updates</a>
+                <a href="./pages/updates.html" class="dropbtn">Updates</a>
             <div class="dropdown-content">
-                <a href="updates.html">Version 1</a>
-                <a href="updates.html">Version 2</a>
+                <a href="./pages/updates.html">Version 1</a>
+                <a href="./pagesupdates.html">Version 2</a>
             </div></li>
-            <li style="float:right"> <a href="aboutme.html">About</a></li>
+            <li style="float:right"> <a href="./pages/aboutme.html">About</a></li>
         </nav>
     </header>
     <body>
