--- a/projects/newsroom.html
+++ b/projects/newsroom.html
@@ -9,7 +9,11 @@
     </head>
     <body>
         <header>
-            <p>navigation</p>
+            <nav>
+                <li><a href="#">Home</a></li>
+                <li><a class="active" href="#">Today's Story</a></li>
+                <li style="float: right;"><a href="#">About</a></li>
+            </nav>
         </header>
         <div class="menu">
             <p>menu</p>
