--- a/projects/portfolio.html
+++ b/projects/portfolio.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio</title>
         <link rel="stylesheet" href="./styles/portfolio-style.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
     <body>
         <header>
@@ -74,7 +75,32 @@
             </div>
         </div>
         <footer>
-            <p>footer</p>
+            <div class="information">
+                <div class="address">
+                    <i class="material-icons icon">location_on</i>
+                    <div>
+                        <p><a href="#">Address Line 1</a></p>
+                        <p><a href="#">Address Line 2</a></p>
+                    </div>
+                </div>
+                <div class="phone">
+                    <i class="material-icons icon">phone</i>
+                    <p><a href="#">123-456-7890</a></p>
+                </div>
+                <div class="email">
+                    <i class="material-icons icon">mail</i>
+                    <p><a href="#">contact@example.com</a></p>
+                </div>
+                <div class="about">
+                    <h4>About the company</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ultrices mi tempus imperdiet nulla malesuada pellentesque elit eget.</p>
+                </div>
+                <div class="social">
+                    <a href="https://www.facebook.com/"><img src="./icons/facebook.png" alt="Facebook"></a>
+                    <a href="https://www.instagram.com/"><img src="./icons/Instagram_Glyph_White.png" alt="Instagram"></a>
+                    <a href="https://github.com/dchecketts/dchecketts.github.io"><img src="./icons/github-mark-white.png" alt="Github"></a>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
