--- a/second.html
+++ b/second.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Home</title>
         <link rel="stylesheet" href="./styles/style.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
     <body>
         <header>
@@ -36,17 +37,31 @@
         </div>
         <div class="booter"></div>
         <footer>
-            <p>Daniel Checketts &copy; 2023</p>
-            <div class="social">
-                <a href="https://facebook.com" target="_blank">
-                    <img src="./images/social/facebook.png" alt="fb icon">
-                </a>
-                <a href="https://github.com/dchecketts/dchecketts.github.io" target="_blank">
-                    <img src="./images/social/github.png" alt="github icon">
-                </a>
-                <a href="https://instagram.com" target="_blank">
-                    <img src="./images/social/instagram.png" alt="instagram icon">
-                </a>
+            <div class="information">
+                <div class="address">
+                    <i class="material-icons icon">location_on</i>
+                    <div>
+                        <p><a href="#">Address Line 1</a></p>
+                        <p><a href="#">Address Line 2</a></p>
+                    </div>
+                </div>
+                <div class="phone">
+                    <i class="material-icons icon">phone</i>
+                    <p><a href="#">123-456-7890</a></p>
+                </div>
+                <div class="email">
+                    <i class="material-icons icon">mail</i>
+                    <p><a href="#">contact@example.com</a></p>
+                </div>
+                <div class="about">
+                    <h4>About the company</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ultrices mi tempus imperdiet nulla malesuada pellentesque elit eget.</p>
+                </div>
+                <div class="social">
+                    <a href="https://www.facebook.com/"><img src="./projects/icons/facebook.png" alt="Facebook"></a>
+                    <a href="https://www.instagram.com/"><img src="./projects/icons/Instagram_Glyph_White.png" alt="Instagram"></a>
+                    <a href="https://github.com/dchecketts/dchecketts.github.io"><img src="./projects/icons/github-mark-white.png" alt="Github"></a>
+                </div>
             </div>
         </footer>
     </body>
