--- a/destinations.html
+++ b/destinations.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Destinations</title>
-        <link rel="stylesheet" href="./styles/destinations.css">
+        <!-- <link rel="stylesheet" href="./styles/destinations.css"> -->
     </head>
     <body>
         <header>
@@ -27,6 +27,7 @@
             <h1>Welcome!</h1>
             <p>Choose any of the following categories to see a list of destinations to visit!</p>
         </div>
+        <div></div>
         <div class="categories">
             <div class="food">
                 <img src="./images/dst_imgs/1932466.png" alt="Food">
