--- a/wdd130/wwr/index.html
+++ b/wdd130/wwr/index.html
@@ -14,10 +14,11 @@
                 <img class="logo" src="./images/logo.png" alt="Dry Oar Logo">
             </a>
             <nav>
-                <a href="index.html">Home</a>
-                <a href="#">Page 2</a>
-                <a href="site-plan-rafting.html">Site Plan</a>
-                <a href="contactus.html">Contact Us</a>
+                <a href="./index.html">Home</a>
+                <a href="./rivers.html">Rivers</a>
+                <a href="./faq.html">FAQ</a>
+                <a href="./blog.html">Blog</a>
+                <a href="./contactus.html">Contact Us</a>
             </nav>
         </header>
         <div id="hero">
