--- a/destinations.html
+++ b/destinations.html
@@ -5,27 +5,22 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Destinations</title>
-        <!-- <link rel="stylesheet" href="./styles/destinations.css"> -->
+        <link rel="stylesheet" href="./styles/destinations.css">
     </head>
     <body>
         <header>
-        <nav>
-            <ul>
-                <li class="dropdown">
-                    <a class="active" href="./destinations.html">What to do?</a>
-                    <div class="dropdown-content">
-                        <a href="./food.html">Food</a>
-                        <a href="./places.html">Places</a>
-                    </div>
-                </li>
-                <li style="float: right;"><a href="./about.html">About</a></li>
-            </ul>
-        </nav>
-    </header>
+            <nav>
+                <ul>
+                    <li><a class="active" href="./destinations.html">Home</a></li>
+                    <li><a href="./food.html">Food</a></li>
+                    <li><a href="./activities.html">Places</a></li>
+                </ul>
+            </nav>
+        </header>
     <section>
         <div id="greeting">
-            <h1>Welcome!</h1>
-            <p>Choose any of the following categories to see a list of destinations to visit!</p>
+            <h1>Don't know what to do on a Saturday?</h1>
+            <p>There's plenty of places for activities and food.</p>
         </div>
         <div></div>
         <div class="categories">
